--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ DB_NAME=portfoliodb
 DB_USER=ajmal
 DB_PASS=portfoliopass@2.0
 SECRET_KEY=jieeief3#2dueweuejfneieowufhuewowu#33u21@eeue3#22juwjw
-ALLOWED_HOSTS=127.0.0.1
+ALLOWED_HOSTS=127.0.0.1,0.0.0.0
+DEBUG=1
