--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_NAME=portfoliodb
 DB_USER=ajmal
 DB_PASS=portfoliopass@2.0
 SECRET_KEY=jieeief3#2dueweuejfneieowufhuewowu#33u21@eeue3#22juwjw
-ALLOWED_HOSTS=127.0.0.1,0.0.0.0
+ALLOWED_HOSTS=127.0.0.1,0.0.0.0,https://ajmalk.com/,ajmalk.com,http://ajmalk.com
 DEBUG=1
