--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,18 +2,21 @@ asgiref==3.5.2
 black==22.3.0
 click==8.1.3
 Django==4.0.4
+django-ckeditor==6.5.1
 django-cors-headers==3.12.0
+django-js-asset==2.0.0
 django-rest-framework==0.1.0
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.2
 gunicorn==20.1.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
 Pillow==9.1.1
 platformdirs==2.5.2
 psycopg2-binary==2.9.3
+PyJWT==2.6.0
 python-dotenv==0.20.0
 pytz==2022.1
 sqlparse==0.4.2
 tomli==2.0.1
 typing_extensions==4.2.0
-django-ckeditor==6.5.1
